# 5g_slicing

component/oai-amf/: CHANGELOG.md
component/oai-amf/ci-scripts/: Jenkinsfile-GitLab-Docker
component/oai-amf/docker/: Dockerfile.amf.rhel9  Dockerfile.amf.rocky9  Dockerfile.amf.ubuntu
component/oai-ausf/ci-scripts/: Jenkinsfile-GitLab-Docker  generateHtmlReport.py
component/oai-ausf/docker/: Dockerfile.ausf.rhel9  Dockerfile.ausf.rocky9  Dockerfile.ausf.ubuntu
component/oai-ausf/openshift/: build-config.yaml
component/oai-nef/: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md
component/oai-nef/ci-scripts/: Jenkinsfile-GitLab-Docker  generateHtmlReport.py  sanityCheckDeploy.py
component/oai-nef/docker/: Dockerfile.nef.rhel8  Dockerfile.nef.rocky8  Dockerfile.nef.ubuntu
component/oai-nrf/ci-scripts/: Jenkinsfile-GitLab-Docker  generateHtmlReport.py
component/oai-nrf/docker/: Dockerfile.nrf.rhel9  Dockerfile.nrf.rocky9
component/oai-nrf/openshift/: build-config.yaml
component/oai-nrf/src/: CODEOWNERS
component/oai-nssf/: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md
component/oai-nssf/ci-scripts/: Jenkinsfile-GitLab-Docker  flatten_image.py  generateHtmlReport.py
component/oai-nssf/docker/: Dockerfile.nssf.rhel9  Dockerfile.nssf.rocky9  Dockerfile.nssf.ubuntu
component/oai-nssf/etc/: config.yaml
component/oai-nssf/openshift/: build-config.yaml
component/oai-nssf/scripts/: healthcheck.sh
component/oai-nssf/src/nssf_app/: CMakeLists.txt  nssf_app.cpp  nssf_app.hpp  nssf_config.cpp  nssf_config.hpp  nssf_config_types.cpp  nssf_config_types.hpp  nssf_slice_availability.cpp  nssf_slice_availability.hpp  nssf_slice_selection.cpp  nssf_slice_selection.hpp
component/oai-pcf/: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md
component/oai-pcf/ci-scripts/: Jenkinsfile-GitLab-Docker  flatten_image.py  generateHtmlReport.py
component/oai-pcf/docker/: Dockerfile.pcf.rhel9  Dockerfile.pcf.rocky9  Dockerfile.pcf.ubuntu
component/oai-pcf/openshift/: build-config.yaml
component/oai-pcf/scripts/: healthcheck.sh
component/oai-pcf/src/api-server/: CMakeLists.txt  api_defs.cpp  api_defs.h  pcf-api-server.cpp  pcf-api-server.hpp  pcf-http2-server.cpp  pcf-http2-server.hpp
component/oai-pcf/src/api-server/api/: IndividualSMPolicyDocumentApi.cpp  IndividualSMPolicyDocumentApi.h  SMPoliciesCollectionApi.cpp  SMPoliciesCollectionApi.h
component/oai-pcf/src/api-server/handler/: api_response.h  individual_sm_policy_document_api_handler.cpp  individual_sm_policy_document_api_handler.h  sm_policies_collection_api_handler.cpp  sm_policies_collection_api_handler.h
component/oai-pcf/src/api-server/impl/: IndividualSMPolicyDocumentApiImpl.cpp  IndividualSMPolicyDocumentApiImpl.h  SMPoliciesCollectionApiImpl.cpp  SMPoliciesCollectionApiImpl.h
component/oai-smf/: .gitmodules  CHANGELOG.md
component/oai-smf/ci-scripts/: Jenkinsfile-GitLab-Docker  generateHtmlReport.py
component/oai-smf/docker/: Dockerfile.smf.rhel9  Dockerfile.smf.rocky9
component/oai-smf/openshift/: build-config.yaml
component/oai-udm/: CHANGELOG.md
component/oai-udm/ci-scripts/: Jenkinsfile-GitLab-Docker  generateHtmlReport.py
component/oai-udm/docker/: Dockerfile.udm.rhel9  Dockerfile.udm.rocky9  Dockerfile.udm.ubuntu
component/oai-udm/openshift/: build-config.yaml
component/oai-udm/src/: CODEOWNERS
component/oai-udr/: .gitignore  CHANGELOG.md
component/oai-udr/ci-scripts/: Jenkinsfile-GitLab-Docker  generateHtmlReport.py
component/oai-upf/: .dockerignore  .gitignore  .gitmodules
component/oai-upf-vpp/: CHANGELOG.md
docker-compose/: check_5GC-rfsim.sh  check_5GS.sh  deploy_5GC.sh  deploy_RAN.sh  docker-compose-slicing-basic-nrf-rfsim.yaml  docker-compose-slicing-basic-nrf.yaml  docker-compose-slicing-ransim.yaml  docker-compose-slicing-rfsim.yaml  start.sh  undeploy_RAN.sh
docker-compose/conf/: slicing_base_config.yaml  slicing_slice12_config.yaml  slicing_slice1_config.yaml  slicing_slice3_config.yaml
docker-compose/ran-conf/: nr-ue2.conf  nr-ue3.conf
docker-compose/rfsim-conf/: gnb-new.conf  gnb.conf  nr-ue1.conf  nr-ue2.conf  nr-ue4.conf
docker-compose/scenario1/: RAN_deploy.sh  docker-compose-slicing-basic-nrf.yaml  docker-compose-slicing-ransim.yaml
docker-compose/scenario2_using_rfgnbsim/: docker-compose-slicing-ransim.yaml
new/: docker-compose.tgz
new/docker-compose/: docker-compose-slicing-ransim.yaml  run-iperf  stop.sh  undeploy_5GC.sh
(+926 files in other folders)
